# repo-digest

./: .gitignore  CONTRIBUTING.md  MVP_PLAN.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/repo_digest/: __init__.py  cli.py  core.py
tests/: test_core.py
