[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "repo-digest"
version = "0.1.0"
description = "Turn any repository into an AI-ready text bundle with safe defaults and rich analytics."
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["llm", "ai", "repository", "export", "text", "tokens", "tiktoken", "analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.4.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
repo-digest = "repo_digest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_digest"]
